# ComputerGraphics

./: CMakeLists.txt  fragment_shader.glsl  lab1.cpp  main.cpp
lab2/: lab2.cpp
lab3/: main.cpp  zapusk.txt
lab4/: vertex_shader.glsl
lab5/: main.cpp
lab6/lab6/: .clang-format  CMakeLists.txt  Makefile
lab6/lab6/doc/doc/: report_6.tex
lab6/lab6/engine/: CMakeLists.txt  Makefile  cmake_install.cmake
lab6/lab6/engine/include/camera/: Camera.hpp  FPCamera.hpp  TPCamera.hpp
lab6/lab6/engine/include/engine/: Scene.hpp
lab6/lab6/engine/include/light/: DirectLight.hpp  PointLight.hpp
lab6/lab6/engine/include/logic/: Event.hpp  EveryNSec.hpp  FrameEvent.hpp  IntersectEvent.hpp  KeyboardEvent.hpp  MouseEvent.hpp
lab6/lab6/engine/include/objects/: Cube.hpp  Flat.hpp  Mesh.hpp  Model.hpp  ObjectBase.hpp
lab6/lab6/engine/include/shader/: Shader.hpp
lab6/lab6/engine/include/texture/: Texture.hpp
lab6/lab6/engine/shaders/: fragment.glsl  obj_fragment.glsl  obj_vertex.glsl  vertex.glsl
lab6/lab6/engine/src/camera/: Camera.cpp  FPCamera.cpp  TPCamera.cpp
lab6/lab6/engine/src/engine/: run.cpp  scene.cpp
lab6/lab6/engine/src/objects/: Cube.cpp  Flat.cpp
lab6/lab6/engine/src/shader/: Shader.cpp
lab6/lab6/engine/src/texture/: Texture.cpp
lab6/lab6/files/Models/: Bambo_House.mtl  Bolt.mtl  Porsche_911_GT2.mtl
lab6/lab6/src/: CMakeCache.txt  Makefile  cmake_install.cmake  lab6  main.cpp
lab6/lab6/src/engine/: Makefile  cmake_install.cmake
